add photo uploads with integration testing

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,7 +2,9 @@
 
 <h1>Photo Share</h1>
 
-<% @photos.each do |photo| %>
-  <%= link_to image_tag(photo.photo.url(:thumb)), photo_path(photo) %><br />
+<% @photos.each_with_index do |photo, index| %>
+  <%= link_to image_tag(photo.photo.url(:thumb), class: "photo#{index}"),
+              photo_path(photo) %>
+  <br />
   <%= photo.caption %>
 <% end %>
