--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <%= flash[:alert] %>
         <%= flash[:notice] %>
         <% if current_user %>
-          Logged in as <%= current_user.name %>  |
+          Logged in as <%= link_to current_user.name, user_path(current_user) %>  |
           <%= link_to "Sign Out", logout_path %>
         <% else %>
           <%= link_to "Sign Up", signup_path %>  |
