--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -11,6 +11,7 @@
       <%= f.label :caption %>
       <%= f.text_field :caption %>
     </div>
+    <%= f.hidden_field :user_id, value: current_user.id %>
   </div>
   <%= f.submit class: "btn btn-success" %>
 <% end %>
