--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -11,6 +11,11 @@
       <%= f.label :caption %>
       <%= f.text_field :caption %>
     </div>
+    <div class="form-group">
+      <%= f.label "Tag your photo" %>
+      <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %>
+    </div>
+    <%= link_to "Add a New Tag", new_tag_path %>
     <%= f.hidden_field :user_id, value: current_user.id %>
   </div>
   <%= f.submit class: "btn btn-success" %>
