--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -13,7 +13,9 @@
     </div>
     <div class="form-group">
       <%= f.label "Tag your photo" %>
-      <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %>
+      <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name)  do |b| %>
+        <%= b.label(class: "checkbox") { b.check_box(class: "checkbox") + b.text } %>
+      <% end %>
     </div>
     <%= link_to "Add a New Tag", new_tag_path %>
     <%= f.hidden_field :user_id, value: current_user.id %>
